--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.7.8",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
